--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,53 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+* {
+    /* border: solid 1px red; */
+}
 
-@layer base {
-/* 
-    @keyframes slideDown {
-        0% {
-            top: 42px;
-            opacity: 0.7;
-        }
-        100% {
-            top: 48px;
-            opacity: 1;
-        }
-    }
+.bg-discount-gradient {
+    background: linear-gradient(125.17deg, #272727 0%, #11101d 100%);
+}
 
-    .sidebar {
-        animation: slideDown 0.25s ease-in;
-    } */
+.hero-grid {
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+}
+
+.text-gradient {
+    background: radial-gradient(
+      64.18% 64.18% at 71.16% 35.69%,
+      #def9fa 0.89%,
+      #bef3f5 17.23%,
+      #9dedf0 42.04%,
+      #7de7eb 55.12%,
+      #5ce1e6 71.54%,
+      #33bbcf 100%
+    );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+  }
+
+.bg-blue-gradient {
+    background: linear-gradient(
+      157.81deg,
+      #def9fa -43.27%,
+      #bef3f5 -21.24%,
+      #9dedf0 12.19%,
+      #7de7eb 29.82%,
+      #5ce1e6 51.94%,
+      #33bbcf 90.29%
+    );
+  }
+
+.bg-pink-gradient {
+    background: rgb(255,171,244);
+    background: linear-gradient(172deg, rgba(255,171,244,0.4724090319721639) 0%, rgba(255,255,255,1) 39%, rgba(255,255,255,1) 62%, rgba(163,251,252,0.5536415249693627) 70%); 
+    filter: blur(1200px);
+    opacity: 0.1;
 }
